--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 August 1995</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 August 2002</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62 878-8866-2684</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Joglo Raya, Jakarta Barat 11640</span></li>
@@ -107,7 +107,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong>Bachelor of Communication Science <span></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>angeliadwigustianti@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
@@ -275,7 +275,7 @@
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="400">
             <div class="features-item">
               <i class="bi bi-person-arms-up" style="color: #e361ff;"></i>
-              <h3><a href="" class="stretched-link">Sports (especially football)
+              <h3><a href="" class="stretched-link">Sports
               </a></h3>
             </div>
           </div><!-- End Feature Item -->
