--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Marketing Communications &amp;  & Advertising.</h2>
